Initial empty board 5x5

--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>TicTacToe - Assignment 1</title>
+    <meta charset="UTF-8" />
+    <style>
+      table,
+      th,
+      td {
+        border: 1px solid black;
+        min-width: 24px;
+        height: 24px;
+      }
+    </style>
+  </head>
 
-<head>
-	<title>Parcel Sandbox</title>
-	<meta charset="UTF-8" />
-</head>
-
-<body>
-	<div id="app"></div>
-
-	<script src="src/index.js">
-	</script>
-</body>
-
+  <body>
+    <div id="board"></div>
+    <script src="src/index.js"></script>
+  </body>
 </html>
